--- a/clientes.html
+++ b/clientes.html
@@ -21,7 +21,7 @@
                                 <li><a href="clientes.html">Clientes</a></li>
                                 <li><a href="servicos.html">Serviços</a></li>
                                 <li><a href="sobre.html">Sobre</a></li>
-                                <li><a href="contato.html">Contato</a></li>
+                                <li><a href="contato.php">Contato</a></li>
                             </ul>
                         </nav>
                     </div>    
@@ -76,34 +76,26 @@
                         eletrônicos de consumo, software de computador e computadores pessoais. </p>
                 </div>
                  <div class="coluna col4">
-                    <h4>Nome da Empresa F</h4>
-                    <img src="img/thumb-grande.jpg" alt="" />
-                    <p>Google LLC é uma empresa multinacional de 
-                        serviços online e software dos Estados Unidos. 
-                        O Google hospeda e desenvolve uma série de serviços 
-                        e produtos baseados na internet e gera lucro
-                        principalmente através da publicidade pelo AdWords. 
-                        A Google é a principal subsidiária da Alphabet Inc</p>
+                    <h4>Sony</h4>
+                    <img src="img/sony.jpg" alt="" />
+                    <p>A Sony é uma empresa multinacional fundada em maio de 1946.
+                         Possui sede em Tóquio, no Japão. É um conglomerado de empresas 
+                         que atuam em setores diversos: eletrônicos, entretenimento, 
+                         indústria fonográfica, telecomunicações, baterias, games, televisão e cinema.</p>
                 </div>
                 <div class="coluna col4">
-                    <h4>Nome da Empresa G</h4>
-                    <img src="img/thumb-grande.jpg" alt="" />
-                    <p>Google LLC é uma empresa multinacional de 
-                        serviços online e software dos Estados Unidos. 
-                        O Google hospeda e desenvolve uma série de serviços 
-                        e produtos baseados na internet e gera lucro
-                        principalmente através da publicidade pelo AdWords. 
-                        A Google é a principal subsidiária da Alphabet Inc</p>
+                    <h4>LG</h4>
+                    <img src="img/lg.jpg" alt="" />
+                    <p>LG Electronics é uma gigante multinacional sul-coreana e a maior 
+                        companhia de eletroeletrônicos. Faz parte da LG Corporation, 
+                        e está presente em mais de 150 países e com fábricas instaladas nos 
+                        4 continentes.</p>
                 </div>
                 <div class="coluna col4">
-                    <h4>Nome da Empresa H</h4>
-                    <img src="img/thumb-grande.jpg" alt="" />
-                    <p>Google LLC é uma empresa multinacional de 
-                        serviços online e software dos Estados Unidos. 
-                        O Google hospeda e desenvolve uma série de serviços 
-                        e produtos baseados na internet e gera lucro
-                        principalmente através da publicidade pelo AdWords. 
-                        A Google é a principal subsidiária da Alphabet Inc</p>
+                    <h4>Motorola</h4>
+                    <img src="img/motorola.jpg" alt="" />
+                    <p>Motorola, Inc. foi uma empresa de telecomunicações multinacional americana 
+                        fundada em 25 de setembro de 1928, baseada em Schaumburg, Illinois</p>
                 </div>
             </section>
         </div>
@@ -112,53 +104,55 @@
                 <div class="coluna col7">
                     <section>
                         <h2>Opinião de quem contratou</h2>
-                        <p>Java é uma linguagem de programação orientada 
-                            a objetos desenvolvida na década de 90 por uma
-                            equipe de programadores chefiada por James Gosling,
-                            na empresa Sun Microsystems. Em 2008 o Java foi 
-                            adquirido pela empresa Oracle Corporation</p>
-                        <p>Java é uma linguagem de programação orientada 
-                            a objetos desenvolvida na década de 90 por uma
-                            equipe de programadores chefiada por James Gosling,
-                            na empresa Sun Microsystems. Em 2008 o Java foi 
-                            adquirido pela empresa Oracle Corporation</p>
-                        <p>Java é uma linguagem de programação orientada 
-                            a objetos desenvolvida na década de 90 por uma
-                            equipe de programadores chefiada por James Gosling,
-                            na empresa Sun Microsystems. Em 2008 o Java foi 
-                            adquirido pela empresa Oracle Corporation</p>
-                        <p><em>Fulano de Tal Empresa ABC</em></p>
+                        <p>- Google: Serviço de qualidade e sem atrasos. 
+                            Fomos bem atendidos e quando passamos para a parte 
+                            do projeto, tudo foi explicado de forma clara.
+                        </p>
+                        <p>- Sony: Ótimo atendimento, sempre estavam a 
+                            disposição quando precisamos. Ofereceram um ótimo 
+                            software, de acordo com o que pedimos.
+                        </p>
+                        <p>- Samsung: Agilidade e competência, tudo
+                            correu muito bem. Estamos felizes em negociar 
+                            com está empresa. Esperamos ter muitos futuros
+                            negócios em breve;.
+                        </p>
+                        <p><em>Informações usadas apenas como exemplo</em></p>
                     </section>
                 </div>
                 <div class="coluna col5">
                     <h3>Últimas notícias</h3>
                     <ul class="sem-marcador sem-padding noticias">
                         <li>
-                            <img src="img/thumb-pequena.jpg" alt="">
-                            <h4>Título da Notícia Publicada no Blog</h4>
-                            <p>Java é uma linguagem de programação orientada 
-                            a objetos desenvolvida na década de 90 por uma
-                            equipe de programadores chefiada por James Gosling,
-                            na empresa Sun Microsystems. Em 2008 o Java foi 
-                            adquirido pela empresa Oracle Corporation <a href="">Leia Mais &raquo;</a></p>
+                            <img src="img/noticia1.jpg" alt="">
+                            <h4>Alunos derrubam Wifi para impedir a realização de prova</h4>
+                            <p>A escola New Jersey Secuacus, nos Estados Unidos,
+                            possui um sistema de aprendizado online para os estudantes 
+                            realizarem lições conectados. Para isso, a própria escola 
+                            também oferece rede WiFi para tornar possível esse tipo de aprendizado.
+                            <a href="https://www.tecmundo.com.br/seguranca/140193-alunos-derrubam-wifi-escola-impedir-realizacao-provas.htm"
+                            target="_bank">Leia Mais &raquo;</a></p>
                         </li>
                         <li>
-                            <img src="img/thumb-pequena.jpg" alt="">
-                            <h4>Título da Notícia Publicada no Blog</h4>
-                            <p>Java é uma linguagem de programação orientada 
-                            a objetos desenvolvida na década de 90 por uma
-                            equipe de programadores chefiada por James Gosling,
-                            na empresa Sun Microsystems. Em 2008 o Java foi 
-                            adquirido pela empresa Oracle Corporation <a href="">Leia Mais &raquo;</a></p>
+                            <img src="img/noticia2.jpg" alt="">
+                            <h4>Listas dos 10 filmes maispirateados da semana</h4>
+                            <p>Seguindo a tradição, o site norte-americano TorrentFreak divulgou nesta segunda-feira (08)
+                             a lista com os 10 filmes mais pirateados durante os últimos sete dias. 
+                             Para a criação desses rankings, ele faz uma busca nos arquivos mais baixados 
+                             pela rede do BitTorrent — uma das mais populares da atualidade. 
+                             <a href="https://www.tecmundo.com.br/cultura-geek/140194-lista-10-filmes-pirateados-semana-08-04-2019.htm"
+                            target="_bank">Leia Mais &raquo;</a></p>
                         </li>
                         <li>
-                            <img src="img/thumb-pequena.jpg" alt="">
-                            <h4>Título da Notícia Publicada no Blog</h4>
-                            <p>Java é uma linguagem de programação orientada 
-                            a objetos desenvolvida na década de 90 por uma
-                            equipe de programadores chefiada por James Gosling,
-                            na empresa Sun Microsystems. Em 2008 o Java foi 
-                            adquirido pela empresa Oracle Corporation <a href="">Leia Mais &raquo;</a></p>
+                            <img src="img/noticia3.jpg" alt="">
+                            <h4>AMD anuncia novos processadores Ryzen Pro e Athlon Pro para notebooks</h4>
+                            <p>A AMD anunciou nesta segunda-feira (8) sua nova linha de processadores para notebooks.
+                             A segunda geração do Ryzen Pro e do Athlon Pro vem na arquitetura de 12 nm, 
+                             conta com placa gráfica Radeon Vega, promete melhor eficiência no consumo de energia, 
+                             recursos de segurança atualizados e parceria com fabricantes que possam entregar um gama de 
+                             produtos para atender ao uso diário até  às atividades mais intensas. 
+                             <a href="https://www.tecmundo.com.br/produto/140192-amd-anuncia-novos-processadores-ryzen-pro-athlon-pro-notebooks.htm"
+                             target="_bank">Leia Mais &raquo;</a></p>
                         </li>
                     </ul>
                 </div>
