--- a/sobre.html
+++ b/sobre.html
@@ -21,7 +21,7 @@
                                 <li><a href="clientes.html">Clientes</a></li>
                                 <li><a href="servicos.html">Serviços</a></li>
                                 <li><a href="sobre.html">Sobre</a></li>
-                                <li><a href="contato.html">Contato</a></li>
+                                <li><a href="contato.php">Contato</a></li>
                             </ul>
                         </nav>
                     </div>    
@@ -64,8 +64,8 @@
                     <section>
                         <h2>Curiosidades</h2>
                         <p>Meu primeiro contato com a tecnologia foi quando 
-                        minha família comprou um computador, e logo que começei a 
-                        usá-lo, percebi que eu adorava aquilo.</p>
+                        minha família comprou um computador, e logo aprendi à
+                        usá-lo, percebi que eu tinha certa habilidade com aquela máquina.</p>
                         <p>Após terminar o médio, eu ingressei na UNOESC em TADS, em Xanxêre, 
                         mas após dois períodos eu tranquei.</p>
                         <p>Então retormei os estudos em Sistemas de Informação aqui na 
@@ -78,31 +78,35 @@
                     <h3>Últimas notícias</h3>
                     <ul class="sem-marcador sem-padding noticias">
                         <li>
-                            <img src="img/thumb-pequena.jpg" alt="">
-                            <h4>Título da Notícia Publicada no Blog</h4>
-                            <p>Java é uma linguagem de programação orientada 
-                            a objetos desenvolvida na década de 90 por uma
-                            equipe de programadores chefiada por James Gosling,
-                            na empresa Sun Microsystems. Em 2008 o Java foi 
-                            adquirido pela empresa Oracle Corporation <a href="">Leia Mais &raquo;</a></p>
+                            <img src="img/noticia1.jpg" alt="">
+                            <h4>Alunos derrubam Wifi para impedir a realização de prova</h4>
+                            <p>A escola New Jersey Secuacus, nos Estados Unidos,
+                             possui um sistema de aprendizado online para os estudantes 
+                             realizarem lições conectados. Para isso, a própria escola 
+                             também oferece rede WiFi para tornar possível esse tipo de aprendizado.
+                            <a href="https://www.tecmundo.com.br/seguranca/140193-alunos-derrubam-wifi-escola-impedir-realizacao-provas.htm"
+                            target="_bank">Leia Mais &raquo;</a></p>
                         </li>
                         <li>
-                            <img src="img/thumb-pequena.jpg" alt="">
-                            <h4>Título da Notícia Publicada no Blog</h4>
-                            <p>Java é uma linguagem de programação orientada 
-                            a objetos desenvolvida na década de 90 por uma
-                            equipe de programadores chefiada por James Gosling,
-                            na empresa Sun Microsystems. Em 2008 o Java foi 
-                            adquirido pela empresa Oracle Corporation <a href="">Leia Mais &raquo;</a></p>
+                            <img src="img/noticia2.jpg" alt="">
+                            <h4>Listas dos 10 filmes maispirateados da semana</h4>
+                            <p>Seguindo a tradição, o site norte-americano TorrentFreak divulgou nesta segunda-feira (08)
+                             a lista com os 10 filmes mais pirateados durante os últimos sete dias. 
+                            Para a criação desses rankings, ele faz uma busca nos arquivos mais baixados 
+                            pela rede do BitTorrent — uma das mais populares da atualidade. 
+                             <a href="https://www.tecmundo.com.br/cultura-geek/140194-lista-10-filmes-pirateados-semana-08-04-2019.htm"
+                            target="_bank">Leia Mais &raquo;</a></p>
                         </li>
                         <li>
-                            <img src="img/thumb-pequena.jpg" alt="">
-                            <h4>Título da Notícia Publicada no Blog</h4>
-                            <p>Java é uma linguagem de programação orientada 
-                            a objetos desenvolvida na década de 90 por uma
-                            equipe de programadores chefiada por James Gosling,
-                            na empresa Sun Microsystems. Em 2008 o Java foi 
-                            adquirido pela empresa Oracle Corporation <a href="">Leia Mais &raquo;</a></p>
+                            <img src="img/noticia3.jpg" alt="">
+                            <h4>AMD anuncia novos processadores Ryzen Pro e Athlon Pro para notebooks</h4>
+                            <p>A AMD anunciou nesta segunda-feira (8) sua nova linha de processadores para notebooks.
+                                 A segunda geração do Ryzen Pro e do Athlon Pro vem na arquitetura de 12 nm, 
+                                 conta com placa gráfica Radeon Vega, promete melhor eficiência no consumo de energia, 
+                                 recursos de segurança atualizados e parceria com fabricantes que possam entregar um gama de 
+                                 produtos para atender ao uso diário até  às atividades mais intensas. 
+                                 <a href="https://www.tecmundo.com.br/produto/140192-amd-anuncia-novos-processadores-ryzen-pro-athlon-pro-notebooks.htm"
+                                 target="_bank">Leia Mais &raquo;</a></p>
                         </li>
                     </ul>
                 </div>
